--- a/main/template/index.html
+++ b/main/template/index.html
@@ -3,7 +3,6 @@
 {% block content %}
     <div class="container-fluid mt-2">
         <h1 class="text-center">Sign Up & Login User API (JWT Token)</h1>
-        <hr>
         <table class="table">
             <thead>
             <tr>
@@ -27,22 +26,22 @@
                 <td>username, password</td>
             </tr>
             <tr>
-                <td>Get or update user</td>
+                <td>Get user</td>
                 <td><a href="http://{{ host }}/auth/users/me/">http://{{ host }}/auth/users/me/</a></td>
                 <td>GET</td>
-                <td>You need your JWT token</td>
+                <td><span class="badge bg-warning text-dark">You need JWT token</span></td>
             </tr>
             <tr>
                 <td>Get all users</td>
                 <td><a href="http://{{ host }}/api/accounts/all-profiles">http://{{ host }}/api/accounts/all-profiles</a></td>
                 <td>GET</td>
-                <td>You need your JWT token</td>
+                <td><span class="badge bg-warning text-dark">You need JWT token</span></td>
             </tr>
             <tr>
                 <td>Update authenticated user</td>
                 <td><a href="http://{{ host }}/api/accounts/profile/[id]">http://{{ host }}/api/accounts/profile/[id]</a></td>
                 <td>PUT</td>
-                <td>You need your JWT token. And you can update what you want</td>
+                <td>description, location, is_creator | <span class="badge bg-warning text-dark">You need JWT token</span></td>
             </tr>
             </tbody>
         </table>
